<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Common.Activity_sign_up">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <ImageView
                android:id="@+id/logo_in"
                android:layout_width="250dp"
                android:layout_height="180dp"
                app:srcCompat="@drawable/frame"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"/>

            <ImageView
                android:id="@+id/WorldCinemaIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/world_cinema"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/name"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/background_edit_txt"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/second_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/sur_name"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/background_edit_txt"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/e_mail_registration"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/e_mail"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/background_edit_txt"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/password_registration"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/password"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/background_edit_txt"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/re_password_registration"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/rep_password"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/background_edit_txt"
                    android:paddingHorizontal="20dp"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/white"/>

                <Button
                    android:onClick=""
                    android:id="@+id/btn_registration"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/registration"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/btn_have_an_acc"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/i_have_an_acc"
                    android:textStyle="bold"
                    android:background="@drawable/background_edit_txt"
                    android:textColor="@color/color_btn"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>