<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Common.Activity_sign_in">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_in"
            android:layout_width="250dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/frame"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/WorldCinemaIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/world_cinema"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/e_mail_sign"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/e_mail"
                android:layout_marginBottom="15dp"
                android:background="@drawable/background_edit_txt"
                android:paddingHorizontal="20dp"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/password_sign"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:layout_marginBottom="15dp"
                android:background="@drawable/background_edit_txt"
                android:paddingHorizontal="20dp"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:background="@drawable/background_edit_txt"
                android:textColor="@color/color_btn"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>